# pt

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  main.cpp  requirements.txt  run.sh
Camera/: Camera.cpp  Camera.h
Hittable/: Hittable.h  HittableWrapper.cpp  HittableWrapper.h  Sphere.cpp  Sphere.h
Maths/: Color.cpp  Color.h  Utils.h  Vec3.cpp  Vec3.h  utils.h
Ray/: Ray.cpp  Ray.h
maths/: Color.h  Vec3.cpp  Vec3.h
ray/: Ray.h
